--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    uses: clambin/workflows/.github/workflows/test.yaml@main
+    uses: clambin/workflows/.github/workflows/test.yaml@go122
     secrets:
       codecov-token: ${{ secrets.CODECOV_TOKEN }}
   publish:
