--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,14 +7,11 @@ on:
 
 jobs:
   test:
-    uses: clambin/workflows/.github/workflows/test.yaml@go122
+    uses: clambin/workflows/.github/workflows/test.yaml@main
     secrets:
       codecov-token: ${{ secrets.CODECOV_TOKEN }}
-  publish:
-    runs-on: ubuntu-latest
-    needs: [ test ]
-    steps:
-      - uses: marvinpinto/action-automatic-releases@v1.2.1
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          prerelease: false
+  release:
+    needs:
+      - test
+    uses: clambin/workflows/.github/workflows/release.yaml@main
+
