--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,6 +4,9 @@ on:
   push:
   pull_request_target:
 
+permissions:
+  contents: read
+
 jobs:
   test:
     uses: clambin/workflows/.github/workflows/test.yaml@main
